@@ -26,7 +26,7 @@ class SetTest extends DocumentingTestBase {
   def graphDescription = List("Andres KNOWS Peter")
 
   override val properties = Map(
-    "Andres" -> Map("age" -> 36l),
+    "Andres" -> Map("age" -> 36l, "awesome" -> true),
     "Peter" -> Map("age" -> 34l)
   )
 
@@ -50,6 +50,21 @@ it using the +SET+ command. One example is if the property comes from a paramete
       queryText = "start n = node(%Andres%) set n.name = null return n",
       returns = "The node is returned by the query, and the name property is now missing.",
       assertions = (p) => assertFalse(node("Andres").hasProperty("name"))
+    )
+  }
+
+  @Test def set_properties_from_other_graph_element() {
+    testQuery(
+      title = "Copying properties between nodes and relationships",
+      text =
+        """You can also use SET to copy all properties from one graph element to another. Remember that doing this
+will remove all other properties on the receiving graph element.""".stripMargin,
+      queryText = "start at = node(%Andres%), pn = node(%Peter%) set at = pn return at, pn",
+      returns = "The Andres node has had all it's properties replaced by the properties in the Peter node.",
+      assertions = (p) => {
+        assert(node("Andres").getProperty("name") === "Peter")
+        assertFalse("Didn't expect the Andres node to have an awesome property", node("Andres").hasProperty("awesome"))
+      }
     )
   }
 }
